# ELECAP

./: .mxproject  ELECAP.ioc  Pin_list.xlsx  README.md
Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Core/Src/: adc.c  dac.c  dma.c  fmc.c  gpio.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tim.c  usart.c
MDK-ARM/: .clangd  ELECAP+ELECAP.cbuild.yml  ELECAP+ELECAP.cprj  ELECAP.cbuild-idx.yml  ELECAP.cbuild-pack.yml  ELECAP.cbuild-set.yml  ELECAP.cproject.yml  ELECAP.csolution.yml  ELECAP.uvguix.ChadPeng  ELECAP.uvoptx  ELECAP.uvprojx  startup_stm32h750xx.lst  startup_stm32h750xx.s  vcpkg-configuration.json
MDK-ARM/ELECAP/: ELECAP.axf  ELECAP.build_log.htm  ELECAP.hex  ELECAP.htm  ELECAP.lnp  ELECAP.map  ELECAP_ELECAP.dep  ELECAP_sct.Bak  ad9959.d  adc.crf  adc.d  bsp_delay.crf  bsp_delay.d  bsp_hzup.d  bsp_key.crf  bsp_key.d  bsp_sdio.d  bsp_spi.crf  bsp_spi.d  bsp_system.crf  bsp_system.d  bsp_text.d  ctiic.crf  ctiic.d  dac.d  dds.d  dev_lcd.crf  dev_lcd.d  dev_w25qxx_lz.crf  dev_w25qxx_lz.d  dma.crf  dma.d  event.crf  event.d  fmc.crf  fmc.d  ft5206.crf  ft5206.d  gpio.crf  gpio.d  (+98 more)
MDK-ARM/RTE/_ELECAP/: RTE_Components.h
MDK-ARM/tmp/ELECAP/ELECAP/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
jlc/: ELECAP.eprj
user/EVENT/: event.c  event.h  keyEvent.c  keyEvent.h  touchEvent.c  touchEvent.h
user/Src/: DDS.c  DDS.h  ITHandler.c  ITHandler.h  UserInterface.c  UserInterface.h  VolBiasDac.c  VolBiasDac.h  mathDef.c  mathDef.h  osc.c  osc.h  volDef.h  waveG.c  waveG.h
user/Src/ddsModule/: AD9959.c  AD9959.h
user/TFT/: UIbutton.c  UIbutton.h  UIfloatingWindow.c  UIfloatingWindow.h  UImessage.c  UImessage.h  UIobject.c  UIobject.h  UIsample.c  UIsample.h  UIwave.c  UIwave.h  interface.c  interface.h  interference.c  interference.h  pipline.c  pipline.h  shadeCursor.c  shadeCursor.h
user/TOUCH/: ctiic.c  ctiic.h  fontInclude.h  ft5206.c  ft5206.h  touch.c  touch.h
user/device/: bsp_delay.c  bsp_delay.h  bsp_hzup.c  bsp_hzup.h  bsp_key.c  bsp_key.h  bsp_sdio.c  bsp_sdio.h  bsp_spi.c  bsp_spi.h  bsp_system.c  bsp_system.h  bsp_text.c  bsp_text.h  dev_lcd.c  dev_lcd.h  dev_w25qxx_lz.c  dev_w25qxx_lz.h
user/fatfs/: diskio.c  diskio.h  ff.c  ffconf.h
